fixed responsiveness and dark mode fixes

--- a/styles/products.css
+++ b/styles/products.css
@@ -8,6 +8,7 @@ main {
   font-size: 30px;
   margin-top: 10px;
   height: 70px;
+  color:#bbe1fa;
 }
 .gallery {
   display: flex;
@@ -44,6 +45,7 @@ main {
   margin: 10px 0px;
   font-size: 1vw;
   max-height: 2vw;
+  color:#bbe1fa;
 }
 .content h6 {
   font-size: 30px;
@@ -55,6 +57,7 @@ main {
 .fa {
   font-size: 1vw;
   margin: 10px 0px;
+  color:#bbe1fa;
 }
 .fa:hover {
   transform: scale(1.3);
@@ -120,6 +123,12 @@ main {
   .content {
     width: 45%;
   }
+  .content p {
+    font-size:2.5vw;
+  }
+  .fa{
+    font-size: 2vw;
+  }
 }
 @media (max-width: 767px) {
   .content {
@@ -131,8 +140,11 @@ main {
   .content h6 {
     margin-top: 40px;
   }
+  .content p {
+    font-size:4vw;
+  }
   .fa {
-    font-size: 5vw;
+    font-size: 6vw;
   }
   main {
     flex-direction: column;
@@ -140,7 +152,7 @@ main {
   .filters {
     width: 90%;
     margin: 0 auto;
-    max-height: 40vw;
+    max-height: 90vw;
   }
   form {
     display: flex;
@@ -150,8 +162,11 @@ main {
     margin-top: 3vh;
     width: 100%;
   }
-  form input {
+  .filters input {
     margin-top: 3vh;
+    margin-bottom: 2vh;
+    height:4vh;
+   font-size:4vw;
   }
   .box select {
     font-size: 4vw;
